fix: overflow x on lg screens

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -10,9 +10,9 @@ $light: #F5F5F5;
 
 //**************MEDIA QUERIES ****************/
 
-$mq-xl: 1920px; 
-$mq-lg: 1280px; 
-$mq-sm: 767px;
+$mq-xl: 1900px; 
+$mq-lg: 1240px; 
+$mq-sm: 750px;
 $mq-xs: 374px;
 
 //**************FONTS****************/
