--- a/style/style__certificates.css
+++ b/style/style__certificates.css
@@ -91,7 +91,7 @@ h6 {
 body {
   margin: 0 auto;
   height: 100%;
-  padding: 0 6px;
+  padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -128,21 +128,21 @@ a:focus {
   min-width: 374px;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 750px) {
   .wrapper {
-    width: 767px;
+    width: 750px;
   }
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1240px) {
   .wrapper {
-    width: 1280px;
+    width: 1240px;
   }
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 1900px) {
   .wrapper {
-    width: 1920px;
+    width: 1900px;
   }
 }
 
@@ -204,7 +204,7 @@ a:focus {
   letter-spacing: 0.25em;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 750px) {
   .section__header:hover {
     letter-spacing: 0.5em;
   }
@@ -240,7 +240,7 @@ a:focus {
   padding-top: 2rem;
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1240px) {
   .section__offset {
     margin: 4rem auto;
     padding-top: 4rem;
@@ -281,7 +281,7 @@ a:focus {
           transform: translateX(-50%);
 }
 
-@media (min-width: 767px) {
+@media (min-width: 750px) {
   .header__inner {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -339,7 +339,7 @@ a:focus {
   display: none;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 750px) {
   .menu {
     display: block;
   }
@@ -362,7 +362,7 @@ a:focus {
   margin-top: 5vh;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 750px) {
   .menu__body {
     margin-top: 0;
     -webkit-box-orient: horizontal;
@@ -392,7 +392,7 @@ a:focus {
           box-shadow: 2px 2px 10px #F5F5F5, -2px -2px 10px #F5F5F5;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 750px) {
   .menu__item {
     width: auto;
     height: auto;
@@ -418,7 +418,7 @@ a:focus {
   color: #19283F;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 750px) {
   .menu__link {
     padding: 4px;
     line-height: 2rem;
@@ -427,7 +427,7 @@ a:focus {
   }
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1240px) {
   .menu__link {
     font-size: 1.5rem;
     line-height: 1.25rem;
@@ -459,7 +459,7 @@ a:focus {
   cursor: pointer;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 750px) {
   .menu__btn {
     display: none;
   }
@@ -601,7 +601,7 @@ a:focus {
   width: 96%;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 750px) {
   .sololearn .gallery__item {
     width: 45%;
   }
